--- a/src/app/alumno/alumno.component.html
+++ b/src/app/alumno/alumno.component.html
@@ -19,7 +19,11 @@
 <mat-form-field class="example-full-width">
 <input matInput [(ngModel)]="result" disabled placeholder="0" name="result">
 </mat-form-field>
+
+<button mat-raised-button routerLink="/tablas">tablas</button> 
 </form>
+
+
 
 
 
