--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,7 @@
 <div style="margin-top: 5%; border: solid black 5px; display: flex;" >
 
 <button routerLink="alumno" style="margin: 2%;">Alumno Page</button>
+<button routerLink="tablas" style="margin: 2%;">Tabla Page</button>
 </div>
 
 
