--- a/src/app/tabla/tabla.component.html
+++ b/src/app/tabla/tabla.component.html
@@ -20,40 +20,39 @@
       <!-- Position Column -->
       <ng-container matColumnDef="position">
         <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{element.posicion}} </mat-cell>
       </ng-container>
   
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <mat-header-cell *matHeaderCellDef> Nombre </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{element.nombre}} </mat-cell>
       </ng-container>
   
       <!-- Weight Column -->
       <ng-container matColumnDef="weight">
         <mat-header-cell *matHeaderCellDef> Peso </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.weight}} kg </mat-cell>
+        <mat-cell *matCellDef="let element"> {{element.peso}} kg </mat-cell>
       </ng-container>
   
       <!-- Symbol Column -->
       <ng-container matColumnDef="symbol">
         <mat-header-cell *matHeaderCellDef> Simbolo </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{element.simbolo}} </mat-cell>
       </ng-container>
       
       <ng-container matColumnDef="options">
         <mat-header-cell *matHeaderCellDef> options </mat-header-cell>
         <mat-cell *matCellDef="let element"> 
 
-        <button mat-button style="height: 25px; position: static;background: transparent;border: none;padding-top: 5px;vertical-align: text-top;">
+        <button mat-button class="btn-edit" title="edit" (click)="edit(element)">
           <mat-icon style="color: black;">edit</mat-icon>
         </button> 
-        <button mat-button class="consultar" 
-            style="height: 25px; position: static;background: transparent;border: none;padding-top: 5px;padding-left: 10%;vertical-align: text-top;">
+        <button mat-button class="btn-detalle" title="open" (click)="detalle(element)">
             <mat-icon style="color: #3f51b5;">visibility</mat-icon>
         </button>
-        <button mat-button style="height: 25px;position: static;color: red;border: none;background: transparent;padding-top: 5px;padding-left: 10%;vertical-align: text-top;">
-            <mat-icon>delete</mat-icon>
+        <button mat-button class="btn-delete" title="close"  (click)="delete(element)">
+            <mat-icon style="color: red;">delete</mat-icon>
         </button>
         
         </mat-cell>
