--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,8 +20,9 @@
 </div>
 <div style="margin-top: 5%; border: solid black 5px; display: flex;" >
 
-<button routerLink="alumno" style="margin: 2%;">Alumno Page</button>
-<button routerLink="tablas" style="margin: 2%;">Tabla Page</button>
+<button routerLink="alumno" style="margin: 2%;">Calculadore</button>
+<button routerLink="tablas" style="margin: 2%;">Quimicos Crud</button>
+<button routerLink="gamestore" style="margin: 2%;">GameStore</button>
 </div>
 
 
