--- a/src/app/Gamestore/index/index.component.html
+++ b/src/app/Gamestore/index/index.component.html
@@ -1,1 +1,30 @@
 <p>index works!</p>
+
+<mat-grid-list cols="4" rowHeight="250px">
+    <mat-grid-tile class="grilla" 
+        *ngFor="let tile of tiles"
+        [colspan]="tile.cols"
+        [rowspan]="tile.rows"
+        
+        >
+
+        <div class="card" style="background-color:{{tile.color}} ;">
+            <figure class="figura">
+                <img class="portada" src="{{tile.img}}" >
+                <br>
+                <div class="descrip">
+                    {{tile.text}}
+                    <br>
+                    {{tile.precio}} €
+                </div>
+                
+                
+            </figure>
+            
+
+        </div>
+       
+      
+      
+    </mat-grid-tile>
+  </mat-grid-list>
