--- a/src/app/Gamestore/index/index.component.html
+++ b/src/app/Gamestore/index/index.component.html
@@ -1,5 +1,12 @@
-<p>index works!</p>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+<footer>
 
+
+<button mat-button class="btn-buy" title="edit" (click)="DetalleCarritoModal()">
+        <mat-icon style="color: black;">shopping_cart</mat-icon>
+        {{acumulador| number: '1.2-2'}}
+</button> 
+</footer>
 <mat-grid-list cols="4" rowHeight="250px">
     <mat-grid-tile class="grilla" 
         *ngFor="let tile of tiles"
