--- a/src/app/Gamestore/modal_juego/detalle-compra/detalle-compra.component.html
+++ b/src/app/Gamestore/modal_juego/detalle-compra/detalle-compra.component.html
@@ -7,7 +7,7 @@
         <mat-form-field>
           <input matInput (keyup)="applyFilter($event)" placeholder="Filter">
         </mat-form-field>
-        
+        <button mat-raised-button  style="margin-left: 2%;" (click)="formCompra()">pagar</button>
         <button mat-raised-button  style="margin-left: 2%;float: right;" (click)="close()">cerrar</button>
 
     </div>
@@ -44,10 +44,10 @@
         <button mat-button class="btn-edit" title="edit" (click)="edit()">
           <mat-icon style="color: black;">edit</mat-icon>
         </button> 
-        <button mat-button class="btn-detalle" title="open" (click)="detalle()">
+        <button mat-button class="btn-detalle" title="open" (click)="detalle(Videojuegos)">
             <mat-icon style="color: #3f51b5;">visibility</mat-icon>
         </button>
-        <button mat-button class="btn-delete" title="close"  (click)="delete()">
+        <button mat-button class="btn-delete" title="close"  (click)="delete(Videojuegos)">
             <mat-icon style="color: red;">delete</mat-icon>
         </button>
         
