--- a/src/app/Gamestore/modal_juego/detalle-juego/detalle-juego.component.html
+++ b/src/app/Gamestore/modal_juego/detalle-juego/detalle-juego.component.html
@@ -19,10 +19,10 @@
 
     <div class="buttons">
         
-        <button mat-button class="btn-buy" title="edit" (click)="cargar()">
+        <button mat-button class="btn-buy" title="agregar" (click)="cargar()">
             <mat-icon style="color: black;">shopping_cart</mat-icon>
         </button> 
-        <button mat-button class="btn-buy" title="edit" >
+        <button mat-button class="btn-buy" title="eliminar" *ngIf="tipo==1" >
             <mat-icon style="color: black;">remove_shopping_cart</mat-icon>
             
         </button> 
