--- a/src/app/Gamestore/modal_juego/detalle-compra/detalle-compra.component.html
+++ b/src/app/Gamestore/modal_juego/detalle-compra/detalle-compra.component.html
@@ -1,18 +1,18 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 <p>Carrito de compras</p>
 
-<div class="example-container mat-elevation-z8" style="width: 100%;">
+<div class="example-container mat-elevation-z8" style="width: 100%;height: 100%;background-color: rgba(76, 79, 79, 0.718);">
 
     <div class="example-header">
         <mat-form-field>
           <input matInput (keyup)="applyFilter($event)" placeholder="Filter">
         </mat-form-field>
-        <button mat-raised-button  style="margin-left: 2%;" (click)="formCompra()">pagar</button>
+        <button mat-raised-button class="btn"  style="margin-left: 2%;" (click)="formCompra()">pagar</button>
         <button mat-raised-button  style="margin-left: 2%;float: right;" (click)="close()">cerrar</button>
 
     </div>
       
-    <mat-table #table [dataSource]="dataSource" style="width: 80%;">
+    <mat-table #table [dataSource]="dataSource" style="width: 80%;margin-left: 2%;margin-right: 2%;">
   
       <ng-container matColumnDef="Id"  >
         <mat-header-cell *matHeaderCellDef > Id </mat-header-cell>
@@ -59,4 +59,4 @@
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns;" style="height: 130px"></mat-row>
     </mat-table>
-  </div>
+</div>
