--- a/src/app/Gamestore/modal_juego/detalle-juego/detalle-juego.component.html
+++ b/src/app/Gamestore/modal_juego/detalle-juego/detalle-juego.component.html
@@ -1,35 +1,44 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 
-<div class="body">
+<div class="body" style="background-color:{{x.color}} ;">
 
-    <div class="card" style="background-color:{{x.color}} ;">
+<div class="figure">
+    <div class="card" >
         <figure class="figura" >
-            <img class="portada" src="{{x.img}}" >
-            <br>
-            <div class="descrip">
-                {{x.nombre}}
-                <br>
-                {{x.precio}} €
-            </div>
-            
-            
+            <img class="portada" src="{{x.img}}" > 
         </figure>
     </div>
 
-
-    <div class="buttons">
+    <div class="descripcion">
+        <h3> Titulo: {{x.nombre}}</h3>
         
-        <button mat-button class="btn-buy" title="agregar" (click)="cargar()">
-            <mat-icon style="color: black;">shopping_cart</mat-icon>
-        </button> 
-        <button mat-button class="btn-buy" title="eliminar" *ngIf="tipo==1" >
-            <mat-icon style="color: black;">remove_shopping_cart</mat-icon>
-            
-        </button> 
-        <button mat-button class=" btn btn-danger" (click)="cerrar()"  >
-            <mat-icon>exit_to_app</mat-icon>
-        </button>
+        <h3> Precio: {{x.precio}}</h3>
+        
+        <h3> descripcion: {{x.descripcion}}</h3>
+        
+        <h3> Plataformas: {{x.plataformas}}</h3>
+
+        
+        <div class="buttons">
+        
+            <button mat-button class="btn-buy" title="agregar" (click)="cargar()">
+                <mat-icon style="color: black;">shopping_cart</mat-icon>
+            </button> 
+            <button mat-button class="btn-buy" title="eliminar" *ngIf="tipo==1"  (click)="quitar(x)">
+                <mat-icon style="color: black;">remove_shopping_cart</mat-icon>
+                
+            </button> 
+            <button mat-button class=" btn-buy" (click)="cerrar()" style="float: right;" >
+                <mat-icon>exit_to_app</mat-icon>
+            </button>
+    
+        </div>
 
     </div>
+
+
+</div> 
+    
+
 </div>
 
