--- a/src/app/Gamestore/modal_juego/form-compra/form-compra.component.html
+++ b/src/app/Gamestore/modal_juego/form-compra/form-compra.component.html
@@ -1,5 +1,9 @@
 <div class="body">
-<h2 style="float: left; margin-top: 10px;">Formulario de Pago</h2>
+  <div class="titulo">
+    <h2 style="float: left; margin-top: 10px;">Formulario de Pago</h2>
+    <span class="span_timer">{{tiempo.min}} : {{tiempo.sec}}</span>
+  </div>
+
 <br>
 <form [formGroup]="form" class="form" layout="column"   onkeydown="if(event.keyCode==13){
         if (event.keyCode === 13 && (event.target.nodeName === 'INPUT' || event.target.nodeName === 'mat-select') ){
@@ -53,7 +57,7 @@
     <button mat-button class=" btn btn-danger" (click)="close()"  >
         <mat-icon>exit_to_app</mat-icon>
     </button>
-    <button mat-button class=" btn btn-success" (click)="pagar()" mat-dialog-close  >
+    <button mat-button class=" btn btn-success" (click)="pagar()"  >
         <mat-icon>done</mat-icon>
     </button>
     
