--- a/src/app/Gamestore/modal_juego/detalle-juego/detalle-juego.component.html
+++ b/src/app/Gamestore/modal_juego/detalle-juego/detalle-juego.component.html
@@ -16,7 +16,7 @@
         
         <h3> descripcion: {{x.descripcion}}</h3>
         
-        <h3> Plataformas: {{x.plataformas}}</h3>
+        <h3> Plataformas: {{x.plataforma1}} <span  *ngIf="(x.plataforma2 && x.plataforma3)=='' ">,</span> {{x.plataforma2}}<span  *ngIf="x.plataforma3=='' ">,</span>{{x.plataforma3}}</h3>
 
         
         <div class="buttons">
