--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,9 @@
     src="../assets/logo_barra.jpg"
   />
   <span>Gamestore</span> 
-<button routerLink="alumno" style="margin: 2%;">Calculadora</button>
-<button routerLink="tablas" style="margin: 2%;">Quimicos Crud</button>
+
 <button routerLink="gamestore" style="margin: 2%;">GameStore</button>
+<button routerLink="CrudVj" style="margin: 2%;">CrudVj</button>
 </div>
 
 
