--- a/src/app/Gamestore/crud-vj/crud-vj.component.html
+++ b/src/app/Gamestore/crud-vj/crud-vj.component.html
@@ -25,7 +25,7 @@
   
       <!-- Weight Column -->
       <ng-container matColumnDef="precio">
-        <mat-header-cell *matHeaderCellDef> Peso </mat-header-cell>
+        <mat-header-cell *matHeaderCellDef> Precio </mat-header-cell>
         <mat-cell *matCellDef="let element"> {{element.precio}} $ </mat-cell>
       </ng-container>
   
