--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
 
 <button routerLink="gamestore" style="margin: 2%;">GameStore</button>
 <button routerLink="CrudVj" style="margin: 2%;">CrudVj</button>
+<button routerLink="" style="margin: 2%;">login</button>
 </div>
 
 
