--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,17 @@
-<div class="toolbar" role="banner">
-  <img
-    width="40"
-    alt="Angular Logo"
-    src="../assets/logo_barra.jpg"
-  />
-  <span>Gamestore</span> 
 
-<button routerLink="gamestore" style="margin: 2%;">GameStore</button>
-<button routerLink="CrudVj" style="margin: 2%;">CrudVj</button>
-<button routerLink="" style="margin: 2%;">login</button>
-</div>
+
+<!-- <mat-toolbar color="primary" style="width: 100%;">
+  <mat-toolbar-row >
+    <span style="float: right;">GameStore</span>
+    <button routerLink="" style="margin: 2%;float: right;">login</button>
+  </mat-toolbar-row>
+</mat-toolbar> -->
+<router-outlet></router-outlet>
 
 
 
 
 
 
-<router-outlet style="margin-top: 2%; "></router-outlet>
+
+
