--- a/src/app/Gamestore/Admin/crud-vj/modal-vj/modal-vj.component.html
+++ b/src/app/Gamestore/Admin/crud-vj/modal-vj/modal-vj.component.html
@@ -1,6 +1,6 @@
 <div class="body">
   <div class="titulo">
-    <h2 style="float: left; margin-top: 10px;">Registro VideoJuego</h2>
+    <h2 style="float: left; margin-top: 10px;">Registro Usuarios</h2>
   </div>
 
 <br>
