--- a/src/app/Gamestore/Admin/crud-usuarios/crud-usuarios.component.html
+++ b/src/app/Gamestore/Admin/crud-usuarios/crud-usuarios.component.html
@@ -1,7 +1,68 @@
 
 <div class="body">
 
-    <p>crud-usuarios works!</p>
+    <div class="example-header">
+        <mat-form-field>
+          <input matInput (keyup)="applyFilter($event)" placeholder="Filter">
+          
+        </mat-form-field>
+        <button mat-raised-button (click)="agregar()" style="margin-left: 2%;">Agregar</button>
 
-</div>
+    </div>
+      
+    <mat-table #table [dataSource]="dataSource" style="background-color: aliceblue;">
+  
+      <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="user">
+        <mat-header-cell *matHeaderCellDef> Usuario </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.user}} </mat-cell>
+      </ng-container>
+  
+      <!-- Weight Column -->
+      <ng-container matColumnDef="email">
+        <mat-header-cell *matHeaderCellDef> Email </mat-header-cell>
+        <mat-cell *matCellDef="let element"> 
+          {{element.email}}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="direcion">
+        <mat-header-cell *matHeaderCellDef> Direccion </mat-header-cell>
+        <mat-cell *matCellDef="let element"> 
+          {{element.direccion}}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="rol">
+        <mat-header-cell *matHeaderCellDef> Rol </mat-header-cell>
+        <mat-cell *matCellDef="let element"> 
+          {{element.rol}}</mat-cell>
+      </ng-container>
+  
+      
+      
+      <ng-container matColumnDef="options">
+        <mat-header-cell *matHeaderCellDef> options </mat-header-cell>
+        <mat-cell *matCellDef="let element"> 
+
+        <button mat-button class="btn-edit" title="edit" (click)="edit(element)">
+          <mat-icon style="color: black;">edit</mat-icon>
+        </button> 
+        <button mat-button class="btn-detalle" title="open" (click)="detalle(element)">
+            <mat-icon style="color: #3f51b5;">visibility</mat-icon>
+        </button>
+        <button mat-button class="btn-delete" title="close"  (click)="delete(element)">
+            <mat-icon style="color: red;">delete</mat-icon>
+        </button>
+        
+        </mat-cell>
+      </ng-container>
+  
+
+    
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+  </div>
 
