--- a/src/app/Gamestore/Admin/crud-usuarios/modal-user/modal-user.component.css
+++ b/src/app/Gamestore/Admin/crud-usuarios/modal-user/modal-user.component.css
@@ -1,9 +1,9 @@
 .body{
     display: flex;
-    height: 90%;
-    width: 100%;
+    height: 100%;
     flex-direction: column;
     align-items: center;
+    margin-left: 2%;
     background-color: rgb(255, 255, 255);
     
 }
