--- a/src/app/axuliares/dialog-confirm/dialog-confirm.component.css
+++ b/src/app/axuliares/dialog-confirm/dialog-confirm.component.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     
     align-items: center;
-    background-color: antiquewhite;
+    background-color: aliceblue;
 }
 
 .buttons{
