--- a/src/app/Gamestore/Admin/index-admin/index-admin.component.css
+++ b/src/app/Gamestore/Admin/index-admin/index-admin.component.css
@@ -1,14 +1,45 @@
-
 .example-container {
-  display: flex;
-  flex-direction: column;
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  width: auto;
+  background-color: rgb(252, 232, 179);
+  display: flex;
+  flex-direction: column;
+  
 }
+
+.mat-sidenav-container{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgb(252, 232, 179);
+  display: flex;
+  flex-direction: column;
+}
+
+.example-events {
+  width: 300px;
+  height: 200px;
+  overflow: auto;
+  border: 1px solid #555;
+}
+
+.MenuExpansible{
+  background-color: rgb(144, 39, 39);
+  
+  display: flex;
+  flex-direction: row;
+  width: 10%;
+}
+
+.MenuButton{
+  width: 100%;
+}
+
 .example-sidenav-container {
   flex: 1;
 }
@@ -81,7 +112,7 @@ display:list-item !important;
 
 .button{
 padding-right: 20%;
-width: 50%;
+width: 100%;
 }
 
 span{
@@ -98,16 +129,5 @@ width: auto;
   
 }
 
-@media (max-width: 600px) {
-  mat-sidenav {
-    /* display: none; */
-    width: 45%!important;
-  }
-  
-}
 
-@media (max-width: 730px) {
-  .navegador > *:not(.ejercicios) {
-    display: none !important;
-  }
-}
+
