--- a/src/app/Gamestore/Admin/index-admin/index-admin.component.html
+++ b/src/app/Gamestore/Admin/index-admin/index-admin.component.html
@@ -1,51 +1,44 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
   <div class="example-container">
-    <div>
-  
-      <mat-toolbar color="primary" class="example-toolbar">
-        <!-- <button mat-icon-button (click)="sidenav.toggle()">
-          <mat-icon *ngIf="!sidenav.opened">menu</mat-icon>
-          <mat-icon *ngIf="sidenav.opened">close</mat-icon>
-        </button> -->
-  
-        <img src="../../../../assets/logo_barra.jpg" class="img-logo">
-  
-        <span class="example-spacer">GameStore/Administracion</span>
-  
-        
-        <button mat-icon-button [matMenuTriggerFor]="menu">
-          <mat-icon>more_vert</mat-icon>
-        </button>
-  
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item routerLink="CrudVj">
-            <mat-icon>games</mat-icon>
-            <span>VideoJuegos</span>
-          </button>
-          
-          
-          <button mat-menu-item routerLink="CrudUsuario">
-            <mat-icon>account_circle</mat-icon>
-            <span>Usuarios</span>
-          </button>
 
-          <button mat-menu-item  (click)="login()">
-            <mat-icon>login</mat-icon>
-            <span>Log out</span>
-          </button>
+    <mat-sidenav-container class="mat-sidenav-container" >
 
+    <mat-toolbar color="primary" class="example-toolbar">
+      <button mat-icon-button (click)="sidenav.toggle()"><mat-icon>menu</mat-icon></button>
+      <h1 class="example-app-name">Responsive App</h1>
+         </mat-toolbar>
+      <mat-sidenav class="MenuExpansible" #sidenav mode="side" 
+      
+      (click)="sidenav.toggle()">
+
+                   <button class="MenuButton" mat-menu-item routerLink="CrudVj">
+                    <mat-icon>games</mat-icon>
+                    <span>VideoJuegos</span>
+                  </button>
+                  <button class="MenuButton" mat-menu-item routerLink="CrudUsuario">
+                    <mat-icon>account_circle</mat-icon>
+                    <span>Usuarios</span>
+                  </button>
           
-          
-        </mat-menu>
-  
-      </mat-toolbar>
-   
-      <router-outlet></router-outlet>
-   
-  
-    </div>
+                  <button class="MenuButton" mat-menu-item  (click)="login()">
+                    <mat-icon>login</mat-icon>
+                    <span>Log out</span>
+                  </button>
+      </mat-sidenav>
     
-  
+      <mat-sidenav-content>
+        
+        <button mat-button (click)="sidenav.toggle()"><mat-icon>home</mat-icon></button>
+        
+        <router-outlet></router-outlet>
+      </mat-sidenav-content>
+
+      
+      
+      
+    </mat-sidenav-container>
+    
+      
   </div>
 
 
