--- a/src/app/Gamestore/User/VideoJuegosHome/VideoJuegosHome.component.html
+++ b/src/app/Gamestore/User/VideoJuegosHome/VideoJuegosHome.component.html
@@ -15,7 +15,7 @@
         
         >
 
-        <div class="card" style="background-color:{{tile.color}} ;" (click)="DetalleModal(tile)">
+        <div class="card" style="background-color:crimson ;" (click)="DetalleModal(tile)">
             <figure class="figura" >
                 <img class="portada" src="{{tile.img}}" >
                 <br>
