--- a/src/app/Gamestore/User/index-user/index-user.component.css
+++ b/src/app/Gamestore/User/index-user/index-user.component.css
@@ -1,112 +1,136 @@
 .example-container {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: auto;
-  }
-  .example-sidenav-container {
-    flex: 1;
-  }
-  .example-spacer {
-    flex: 1 1 auto;
-  }
-  /*Side*/
-  .example-sidenav-content {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgb(252, 232, 179);
   display: flex;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-  background-color: aliceblue;
-  }
+  flex-direction: column;
   
-  .submenu2[_ngcontent-cid-c333]{
-    background-color: transparent !important;
-  }
-  
-  .submenu2{
-    background-color: transparent !important;
-  }
-  
-  .example-sidenav {
-  user-select: none;
-  }
-  .full-width {
+}
+.example-toolbar{
   width: 100%;
-  }
-  
-  .menu-button {
-  transition: 300ms ease-in-out;
-  transform: rotate(0deg);
-  }
-  .menu-button.rotated {
-  transform: rotate(180deg);
-  }
-  .submenu {
-  display:none !important;
-  overflow-y: hidden;
-  transition: transform 300ms ease;
-  transform: scaleY(0);
-  transform-origin: top;
-  padding-left: 5px;
-  }
-  .submenu.expanded {
-  transform: scaleY(1);
-  display:list-item !important;
-  }
-  
-  .submenu_button {
-  
-  transform: scaleY(1);
-  }
-  
-  .submenu2 {
-  display:none !important;
-  overflow-y: hidden;
-  transition: transform 300ms ease;
-  transform: scaleY(0);
-  transform-origin: top;
-  background-color: rgb(214, 214, 214);
-  padding-left: 8px;
-  }
-  
-  .submenu2.expanded {
-  transform: scaleY(1);
-  display:list-item !important;
-  }
-  
-  .button{
-  padding-right: 20%;
-  width: 50%;
-  }
-  
-  span{
-  width: auto;
-  }
-  
-  
-  
-  .img-logo{
-    max-width: 100%;
-    width: 4%;
-    height: 70%;
-    border-bottom: 5px solid black;
-    
-  }
-  
-  @media (max-width: 600px) {
-    mat-sidenav {
-      /* display: none; */
-      width: 45%!important;
-    }
-    
-  }
-  
-  @media (max-width: 730px) {
-    .navegador > *:not(.ejercicios) {
-      display: none !important;
-    }
-  }
+  background-color: rgb(144, 39, 39);
+}
+
+.mat-sidenav-container{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgb(252, 232, 179);
+  display: flex;
+  flex-direction: column;
+}
+
+.example-events {
+  width: 300px;
+  height: 200px;
+  overflow: auto;
+  border: 1px solid #555;
+}
+
+.MenuExpansible{
+  background-color: rgb(144, 39, 39);
+
+  display: flex;
+  flex-direction: row;
+  width: 10%;
+}
+
+.MenuButton{
+  width: 100%;
+  margin-top: 10%;
+  color: rgb(252, 232, 179);
+  border: none;
+}
+
+span{
+  color:rgb(252, 232, 179);
+}
+.example-sidenav-container {
+  flex: 1;
+}
+.example-spacer {
+  width: 10%;
+  margin-left: 2%;
+  float: right;
+}
+.img-logo{
+  margin-left: 80%;
+  float: right;
+  max-width: 100%;
+  width: 4%;
+  height: 70%;
+  border-bottom: 5px solid black;
+}
+/*Side*/
+.example-sidenav-content {
+display: flex;
+height: 100%;
+align-items: center;
+justify-content: center;
+background-color: aliceblue;
+}
+
+.submenu2[_ngcontent-cid-c333]{
+  background-color: transparent !important;
+}
+
+.submenu2{
+  background-color: transparent !important;
+}
+
+.example-sidenav {
+user-select: none;
+}
+.full-width {
+width: 100%;
+}
+
+.menu-button {
+transition: 300ms ease-in-out;
+transform: rotate(0deg);
+}
+.menu-button.rotated {
+transform: rotate(180deg);
+}
+.submenu {
+display:none !important;
+overflow-y: hidden;
+transition: transform 300ms ease;
+transform: scaleY(0);
+transform-origin: top;
+padding-left: 5px;
+}
+.submenu.expanded {
+transform: scaleY(1);
+display:list-item !important;
+}
+
+.submenu_button {
+
+transform: scaleY(1);
+}
+
+.submenu2 {
+display:none !important;
+overflow-y: hidden;
+transition: transform 300ms ease;
+transform: scaleY(0);
+transform-origin: top;
+background-color: rgb(214, 214, 214);
+padding-left: 8px;
+}
+
+.submenu2.expanded {
+transform: scaleY(1);
+display:list-item !important;
+}
+
+.button{
+padding-right: 20%;
+width: 100%;
+}
