--- a/src/app/Gamestore/User/index-user/index-user.component.html
+++ b/src/app/Gamestore/User/index-user/index-user.component.html
@@ -1,51 +1,49 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
   <div class="example-container">
-    <div>
-  
-      <mat-toolbar color="primary" class="example-toolbar">
-  
-        <img src="../../../../assets/logo_barra.jpg" class="img-logo">
-  
-        <span class="example-spacer">GameStore</span>
-  
-        
-        <button style="float: right;" mat-icon-button [matMenuTriggerFor]="menu">
-          <mat-icon>more_vert</mat-icon>
+
+    <mat-sidenav-container class="mat-sidenav-container" >
+
+      <mat-sidenav class="MenuExpansible" #sidenav mode="side"(click)="sidenav.toggle()">
+
+        <button mat-button class="MenuButton"  routerLink="homeVideojuegos">
+         <mat-icon style="color:rgb(252, 232, 179);">games</mat-icon>
+         <span>VideoJuegos</span>
+         </button>
+         <button mat-button class="MenuButton">
+          <mat-icon>account_circle</mat-icon>
+          <span>Consolas</span>
         </button>
+
+        <button mat-button class="MenuButton">
+          <mat-icon>account_circle</mat-icon>
+          <span>Accesorios</span>
+        </button>
+
+       <button mat-button  class="MenuButton" (click)="login()">
+         <mat-icon style="color: rgb(252, 232, 179);">login</mat-icon>
+         <span>Log out</span>
+       </button>
+      </mat-sidenav>
   
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item routerLink="homeVideojuegos">
-            <mat-icon>games</mat-icon>
-            <span>VideoJuegos</span>
-          </button>
-          
-          
-          <button mat-menu-item >
-            <mat-icon>account_circle</mat-icon>
-            <span>Consolas</span>
-          </button>
-
-          <button mat-menu-item >
-            <mat-icon>account_circle</mat-icon>
-            <span>Accesorios</span>
-          </button>
-
-          <button mat-menu-item  (click)="login()">
-            <mat-icon>login</mat-icon>
-            <span>Log out</span>
-          </button>
-
-          
-          
-        </mat-menu>
-  
-      </mat-toolbar>
+      
    
-      <router-outlet></router-outlet>
+      <mat-sidenav-content>
+        
+        <mat-toolbar color="primary" class="example-toolbar">
+
+          <button mat-button (click)="sidenav.toggle()" style="float: left;"><mat-icon>home</mat-icon></button>
+          <img src="../../../../assets/logo_barra.jpg" class="img-logo" >
+          <p class="example-spacer" >GameStore</p>
+          
+        </mat-toolbar>
+        
+        
+        <router-outlet (click)="sidenav.toggle()"></router-outlet>
+      </mat-sidenav-content>
    
   
-    </div>
     
+    </mat-sidenav-container>
   
   </div>
 
