--- a/src/app/Gamestore/Admin/crud-vj/crud-vj.component.html
+++ b/src/app/Gamestore/Admin/crud-vj/crud-vj.component.html
@@ -2,8 +2,9 @@
 
 
 <div class="body">
-
+  <audio #audioPlayer autoplay></audio>
     <div class="example-header">
+     
         <mat-form-field>
           <input matInput (keyup)="applyFilter($event)" placeholder="Filter">
           
