--- a/src/app/Gamestore/Admin/crud-vj/modal-vj/modal-vj.component.css
+++ b/src/app/Gamestore/Admin/crud-vj/modal-vj/modal-vj.component.css
@@ -1,3 +1,8 @@
+
+.mat-dialog-container {
+  
+  overflow-y: auto; /* Agrega una barra de desplazamiento vertical si el contenido excede la altura máxima */
+}
 .body{
     display: flex;
     height: 90%;
@@ -5,7 +10,12 @@
     flex-direction: column;
     align-items: center;
     background-color: rgb(255, 255, 255);
+   
     
+}
+
+input[type="file"] {
+  display: none;
 }
 
 .titulo{
