--- a/src/app/Gamestore/Admin/crud-vj/modal-vj/modal-vj.component.html
+++ b/src/app/Gamestore/Admin/crud-vj/modal-vj/modal-vj.component.html
@@ -1,6 +1,6 @@
 <div class="body">
   <div class="titulo">
-    <h2 style="float: left; margin-top: 10px;">Registro Usuarios</h2>
+    <h2 style="float: left; margin-top: 10px;">{{h1}}</h2>
   </div>
 
 <br>
@@ -52,20 +52,22 @@
       </mat-form-field>
       <mat-form-field style="width: 50%;">
         <mat-select placeholder="Genero" formControlName="genero" >
-          <mat-option *ngFor="let gen of generosList" [value]="gen">
+          <mat-option *ngFor="let gen of generosList" [value]="gen.id">
             {{ gen.nombre }}
           </mat-option>
         </mat-select>
       </mat-form-field>
-      <mat-form-field style="width: 50%;">
-        <mat-select placeholder="Portada" formControlName="img" >
-          <mat-option *ngFor="let img of arrayImg" [value]="img['path']">
-            {{ img['nombre'] }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      
-
+      <div style="display: flex; flex-direction: row;width: 70%;max-height: 15%;">
+        {{ 'Seleccionar archivo' }}
+        <input type="file" formControlName="img" (change)="onFileSelected($event)" style="display: none" #fileInput>
+        <button mat-icon-button (click)="fileInput.click()">
+          <mat-icon>attach_file</mat-icon>
+        </button>
+        <div *ngIf="selectedFileUrl" style="max-width: 30%;max-height: 30%;" >
+          <img [src]="selectedFileUrl" alt="Imagen seleccionada" style="max-width: 100%;max-height: 100%;" >
+          
+        </div>
+      </div>
     </div>
   </div>
   <div class="card-header position-sticky sticky-top" style="margin:2%;background-color:rgb(255, 255, 255);top: -25px;">
