--- a/src/app/Gamestore/User/VideoJuegosHome/VideoJuegosHome.component.html
+++ b/src/app/Gamestore/User/VideoJuegosHome/VideoJuegosHome.component.html
@@ -2,6 +2,7 @@
 <div class="body">
 <br>
 <div class="footer">
+    <span>VideoJuegos Disponibles</span>
 <button mat-button class="btn-buy" title="edit" (click)="DetalleCarritoModal()" >
         <mat-icon style="color: black;">shopping_cart</mat-icon>
         {{acumulador| number: '1.2-2'}}
