--- a/src/app/Gamestore/User/index-user/index-user.component.html
+++ b/src/app/Gamestore/User/index-user/index-user.component.html
@@ -10,12 +10,12 @@
          <span>VideoJuegos</span>
          </button>
          <button mat-button class="MenuButton">
-          <mat-icon>account_circle</mat-icon>
+          <mat-icon style="color:rgb(252, 232, 179);">account_circle</mat-icon>
           <span>Consolas</span>
         </button>
 
         <button mat-button class="MenuButton">
-          <mat-icon>account_circle</mat-icon>
+          <mat-icon style="color:rgb(252, 232, 179);">account_circle</mat-icon>
           <span>Accesorios</span>
         </button>
 
