--- a/src/app/Gamestore/User/VideoJuegosHome/VideoJuegosHome.component.html
+++ b/src/app/Gamestore/User/VideoJuegosHome/VideoJuegosHome.component.html
@@ -2,11 +2,35 @@
 <div class="body">
 <br>
 <div class="footer">
-    <span>VideoJuegos Disponibles</span>
-<button mat-button class="btn-buy" title="edit" (click)="DetalleCarritoModal()" >
+    <h1 style="margin-left: 2%;">VideoJuegos Disponibles</h1>
+    <mat-form-field style="margin-left: 5%;">
+        <input matInput [(ngModel)]="Nombrefiltrer" (keyup)="applyFilter()" placeholder="Filtrar por nombre"> 
+    </mat-form-field>
+
+    <mat-form-field style="margin-left: 3%;" class="SelectGenero">
+        <mat-select placeholder="Genero" [(ngModel)]="SelectionGene" (selectionChange)="applyFilter()" >
+            <mat-option *ngFor="let gen of GenerosList" value="{{gen.id}}">
+                {{gen.nombre}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+
+    <mat-form-field style="margin-left: 3%;" class="SelectPlata">
+        <mat-select placeholder="Plataformas" [(ngModel)]="SelectionPlata" (selectionChange)="applyFilter()" >
+            <mat-option *ngFor="let pla of PlataformasList" value="{{pla.id}}">
+                {{pla.nombre}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+
+    <button mat-button  (click)="clearFilter()" style="margin-left: 2%;" >
+        <mat-icon style="color: black;">clear_all</mat-icon>
+    </button> 
+
+    <button mat-button class="btn-buy" title="edit" (click)="DetalleCarritoModal()" >
         <mat-icon style="color: black;">shopping_cart</mat-icon>
         {{acumulador| number: '1.2-2'}}
-</button> 
+    </button> 
 </div>
 <mat-grid-list cols="4" rowHeight="250px">
     <mat-grid-tile class="grilla" 
@@ -16,7 +40,7 @@
         
         >
 
-        <div class="card" style="background-color:crimson ;" (click)="DetalleModal(tile)">
+        <div class="card" style="background-color:rgb(228, 220, 221) ;" (click)="DetalleModal(tile)">
             <figure class="figura" >
                 <img class="portada" src="{{tile.img}}" >
                 <br>
