--- a/src/app/Gamestore/User/modal_juego/detalle-juego/detalle-juego.component.html
+++ b/src/app/Gamestore/User/modal_juego/detalle-juego/detalle-juego.component.html
@@ -1,6 +1,6 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 
-<div class="body" style="background-color:crimson ;">
+<div class="body" style="background-color:rgb(228, 220, 221) ;">
 
 <div class="figure">
     <div class="card" >
@@ -16,7 +16,9 @@
         
         <h3> descripcion: {{x.descripcion}}</h3>
         
-        <h3> Plataformas: {{x.plataformas}}</h3> 
+        <h3> Plataformas: {{plataformas}}</h3> 
+
+        <h3> Genero: {{genero}}</h3> 
 
         
         <div class="buttons">
