--- a/src/app/Gamestore/Admin/index-admin/index-admin.component.html
+++ b/src/app/Gamestore/Admin/index-admin/index-admin.component.html
@@ -14,7 +14,11 @@
                     <mat-icon style="color: rgb(252, 232, 179);">account_circle</mat-icon>
                     <span>Usuarios</span>
                   </button>
-          
+                  <button  mat-button class="MenuButton"  routerLink="CrudVc">
+                    <mat-icon style="color: rgb(252, 232, 179);">videogame_asset</mat-icon>
+                    <span>VideoConsola</span>
+                  </button>
+                  
                   <button  mat-button class="MenuButton"  (click)="login()">
                     <mat-icon style="color: rgb(252, 232, 179);">login</mat-icon>
                     <span>Log out</span>
