--- a/src/app/Gamestore/User/index-user/index-user.component.html
+++ b/src/app/Gamestore/User/index-user/index-user.component.html
@@ -9,11 +9,14 @@
          <mat-icon style="color:rgb(252, 232, 179);">games</mat-icon>
          <span>VideoJuegos</span>
          </button>
-         <button mat-button class="MenuButton">
-          <mat-icon style="color:rgb(252, 232, 179);">account_circle</mat-icon>
+         
+        <button mat-button class="MenuButton" routerLink="homeVideoConsolas">
+          <mat-icon style="color:rgb(252, 232, 179);">videogame_asset</mat-icon>
           <span>Consolas</span>
         </button>
 
+
+        
         <button mat-button class="MenuButton">
           <mat-icon style="color:rgb(252, 232, 179);">account_circle</mat-icon>
           <span>Accesorios</span>
